Fri Jul 26 13:08:53 2013  Zachary Scott  <e@zzak.io>

	* ext/fiddle/lib/fiddle.rb: [DOC] Document Fiddle.dlopen(nil)
	* ext/fiddle/handle.c: [DOC] Document Fiddle::Handle.new(nil)

Fri Jul 26 13:04:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_load_internal): use rb_load_file_str() to keep path
	  encoding.

	* load.c (rb_require_safe): search in OS path encoding for Windows.

	* ruby.c (rb_load_file_str): load file with keeping path encoding.

	* win32/file.c (rb_file_load_ok): use WCHAR type API assuming incoming
	  path is encoded in UTF-8.  [ruby-core:56136] [Bug #8676]

	* file.c (rb_str_encode_ospath): simplify using rb_str_conv_enc().

	* win32/file.c (fix_string_encoding): simplify with rb_str_conv_enc().

	* win32/file.c (convert_mb_to_wchar): use bare pointer instead of
	  VALUE, and remove useless argument.

Fri Jul 26 11:42:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rational.c (f_round_common): Rational is expected to be returned by
	  Rational#*, but mathn.rb breaks that assumption.  [ruby-core:56177]
	  [Bug #8687]

Fri Jul 26 01:37:45 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h: check defined(USE_RGENGC_LOGGING_WB_UNPROTECT)

Fri Jul 26 01:21:41 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (rb_file_expand_path_internal): fix r42160; skip '~'.

Thu Jul 25 17:53:18 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#connect): disable Nagle's algorithm on
	  HTTP connection. [ruby-core:56158] [Feature #8681]

Thu Jul 25 17:49:42 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_to_s): convert closing parenthes to the target encoding
	  if it is ASCII incompatible encoding. [ruby-core:56063] [Bug #8650]

Thu Jul 25 17:21:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (is_obj_encoding): new macro to check if obj is an
	  Encoding.  obj can be any type while is_data_encoding expects T_DATA
	  only.
